# ai-project-breakdown

./: README.md  pyproject.toml  streamlit_app.py
ai-project-breakdown/: page1.py  page2.py
ai_project_breakdown/: page1.py  page2.py  project_dummy.py  project_langchain.py  prompts.toml
